syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.interledger.spsp.server.grpc";
package org.interledger.stream.proto;

message CreateAccountResponse {

  string accountRelationship = 1;
  string assetCode = 2;
  int32 assetScale = 3;
  uint64 maximumPacketAmount = 4;
  map<string, string> customSettings = 5; // TODO: What should protobuf :value type be?
  string accountId = 6;
  string createdAt = 7;
  string modifiedAt = 8;
  string description = 9;
  string linkType = 10;
  bool isInternal = 11;
  bool isConnectionInitiator = 12;
  string ilpAddressSegment = 13;
  bool isSendRoutes = 14;
  bool isReceiveRoutes = 15;
  map<string, string> balanceSettings = 16;
  map<string, string> rateLimitSettings = 17;
  SettlementEngineDetails settlementEngineDetails = 18;
  bool isParentAccount = 19;
  bool isChildAccount = 20;
  bool isPeerAccount = 21;
  bool isPeerOrParentAccount = 22;

  int32 createStatus = 23;

  message SettlementEngineDetails {
      string settlementEngineAccountId = 1;
      string baseUrl = 2;
      map<string, string> customSettings = 3;
  }
}






